--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -41,7 +41,7 @@ services:
     class: IndyDevGuy\MaintenanceBundle\Command\DriverLockCommand
     public: true
     tags:
-      - { name: kernel.command, command: idg_maintenance.driver.lock }
+      - { name: kernel.command, command: idg:maintenance:lock }
     arguments:
       - '@idg_maintenance.driver.factory'
 
@@ -49,7 +49,7 @@ services:
     class: IndyDevGuy\MaintenanceBundle\Command\DriverUnlockCommand
     public: true
     tags:
-      - { name: kernel.command, command: idg_maintenance.driver.unlock }
+      - { name: kernel.command, command: idg:maintenance:unlock }
     arguments:
       - '@idg_maintenance.driver.factory'
 
