--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
   "require": {
     "php": ">=7.4.0",
     "symfony/framework-bundle": "~2.7|~3.0|~4.0|~5.0",
-    "symfony/translation": "~2.7|~3.0|~4.0|~5.0"
+    "symfony/translation": "~2.7|~3.0|~4.0|~5.0",
+    "ext-pdo": "*"
   },
   "require-dev": {
     "symfony/phpunit-bridge": "~2.7|~3.0|~4.0|~5.0"
